初始化支持
